[package]
name = "liblet"
version = "0.1.0"
authors = ["Kristian Notari <kristiannotari@icloud.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
serde = { version = "1.0.106", features = ["derive"] }
